--- a/index.html
+++ b/index.html
@@ -4,25 +4,34 @@
      <meta charset="utf-8">
      <title>Мой первый сайт</title>
      <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="font.css">
 </head>
 <body>
-  <header>
-    <div class="logo">app.creation</div>
-    <nav>
-      <a href="#">start</a>
-      <a href="#">services</a>
-      <a href="#">about</a>
-      <a href="#">blog</a>
-      <a href="#">contact us</a>
-    </nav>
-  </header>
-     <section>
-       <main>
-         <h1 class="title">Building an App Without Design Expertise?</h1>
-         <p>I help tech startups design better digital products without hiring a full-time designer</p>
-         <button type="button" name="button">Schedule free consultation</button>
-       </main>
-          <div><img src="img/Frame.png" alt=""></div>
-     </section>
+    <div class="wrapper">
+    <header class="header">
+      <div class="logo">
+        <div class="logo__circle logo__circle_color_dark-blue"></div>
+        <div class="logo__circle logo__circle_color_blue"></div>
+        app.creation
+      </div>
+      <nav class="menu">
+        <a href="#" class="menu_item">start</a>
+        <a href="#" class="menu_item">services</a>
+        <a href="#" class="menu_item">about</a>
+        <a href="#" class="menu_item">blog</a>
+        <a href="#" class="menu_item">contact us</a>
+      </nav>
+    </header>
+       <section class="main-section">
+         <main class="main-content">
+           <h1 class="main-content__title">Building an App Without Design Expertise?</h1>
+           <p class="main-content__description">I help tech startups design better digital products without hiring a full-time designer</p>
+           <button class="main-content__button" type="button" name="button">Schedule free consultation</button>
+         </main>
+            <div class="image-content">
+              <img src="img/Frame.png" alt="image" class="image-content__image">
+            </div>
+       </section>
+   </div>
 </body>
 </html>
