--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-
 <!DOCTYPE html>
 <html>
 <head>
      <meta charset="utf-8">
      <title>Мой первый сайт</title>
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto">
      <link rel="stylesheet" href="style.css">
      <link rel="stylesheet" href="font.css">
 </head>
@@ -36,4 +36,3 @@
    </div>
 </body>
 </html>
-   
