--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <div class="logo">
         <div><img src="img/Group 15.png" alt=""></div>app.creation</div>
       <nav class="menu">
-        <a href="#" class="menu_item">start</a>
-        <a href="#" class="menu_item">services</a>
-        <a href="#" class="menu_item">about</a>
-        <a href="#" class="menu_item">blog</a>
-        <a href="#" class="menu_item">contact us</a>
+        <a href="#" class="menu__item">start</a>
+        <a href="#" class="menu__item">services</a>
+        <a href="#" class="menu__item">about</a>
+        <a href="#" class="menu__item">blog</a>
+        <a href="#" class="menu__item">contact us</a>
       </nav>
     </header>
        <section class="main-section">
