--- a/index.html
+++ b/index.html
@@ -15,22 +15,24 @@
         app.creation
       </div>
       <nav class="menu">
-        <a href="#" class="menu__item">start</a>
-        <a href="#" class="menu__item">services</a>
-        <a href="#" class="menu__item">about</a>
-        <a href="#" class="menu__item">blog</a>
-        <a href="#" class="menu__item">contact us</a>
+        <a href="#" class="menu_item">start</a>
+        <a href="#" class="menu_item menu__item_active">services</a>
+        <a href="#" class="menu_item">about</a>
+        <a href="#" class="menu_item">blog</a>
+        <a href="#" class="menu_item">contact us</a>
       </nav>
     </header>
-       <section class="main-section">
-         <main class="main-content">
-           <h1 class="main-content__title">Building an App Without Design Expertise?</h1>
-           <p class="main-content__description">I help tech startups design better digital products without hiring a full-time designer</p>
-           <button class="main-content__button" type="button" name="button">Schedule free consultation</button>
-         </main>
-            <div class="image-content">
-              <img src="img/Frame.png" alt="image" class="image-content__image">
-            </div>
+       <section class="main">
+           <h1 class="main__title">
+             Building an App
+             <span class="main__title-text_highlight">Without Design Expertise?</span>
+           </h1>
+           <p class="main__description">
+             I help tech startups design better digital products without hiring a full-time designer
+           </p>
+           <a class="main__button" href="#">
+             Schedule free consultation
+           </a>
        </section>
    </div>
 </body>
